# elperuano-llm

./: .gitignore  README.md  main.py  pyproject.toml
sources/: commons.py  elperuano.py
sources/scripts/: legal_laws.fql
